Fix tests and upgrade libs to make tests pass on JDK13
- Upgrade Mockito and PowerMock with a version that support JDK12+
- Fix bash script tests

Reviewers: Ivan Kelly <ivank@apache.org>

This closes #2169 from eolivelli/fix/make-tests-pass-jdk13